--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <nav>
         <ul>
             <li>MyTicTacToe</li>
+            
         </ul>
     </nav>
+    <div class="name"><h5>Made With &hearts; By Karan</h5></div>
+   
     <div class="gamecontainer">
         <div class="container">
             <div class="box bt-0  bl-0"><span class="boxtext"></span></div>
@@ -25,11 +28,14 @@
             <div class="box bb-0"><span class="boxtext"></span></div>
             <div class="box bb-0 br-0"><span class="boxtext"></span></div>     
         </div>
+        
         <div class="gameinfo">
-            <h1>Welcome To MyTicTacToe</h1>
+            <h3>Welcome To MyTicTacToe</h3>
             <div>
                 <span class="info"><h3>TURN FOR X</span>
-                <button id="reset">Reset</button>
+        </div>
+        <div>
+            <button id="reset">Reset</button>
         </div>
         <div class="imagebox">
             <img src="win.gif">
